[gd_scene load_steps=17 format=2]

[ext_resource path="res://Prototype/Buzzes_1st_Attempt/Station_505_Intensity1.mp3" type="AudioStream" id=1]
[ext_resource path="res://Prototype/Buzzes_1st_Attempt/black-and-purple-hexagon-grid.jpg" type="Texture" id=2]
[ext_resource path="res://Prototype/Buzzes/Buzz.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prototype/Main.gd" type="Script" id=4]
[ext_resource path="res://Prototype/Buzzes/Blip_Select18.wav" type="AudioStream" id=5]
[ext_resource path="res://Prototype/CreateUserButton.gd" type="Script" id=6]
[ext_resource path="res://Prototype/LogInScreen/LoginButton.gd" type="Script" id=7]
[ext_resource path="res://images/BEE.png" type="Texture" id=8]
[ext_resource path="res://Prototype/UserPanel.gd" type="Script" id=9]
[ext_resource path="res://Prototype/RecentHive/RecentTags.gd" type="Script" id=10]
[ext_resource path="res://Prototype/RecentHive/RecentHive.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[sub_resource type="Theme" id=2]
PanelContainer/styles/panel = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.454902, 0.454902, 0.454902, 0 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 360, 360 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
mouse_filter = 1
script = ExtResource( 4 )

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -310, 19 )
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
margin_right = 1024.0
margin_bottom = 600.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Hives" type="Panel" parent="Background/HBoxContainer"]
margin_right = 204.0
margin_bottom = 600.0
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="HiveContainer" type="VBoxContainer" parent="Background/HBoxContainer/Hives"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HivesLabel" type="Label" parent="Background/HBoxContainer/Hives/HiveContainer"]
margin_right = 204.0
margin_bottom = 14.0
text = "HIVES"
align = 1

[node name="Hive1" type="LineEdit" parent="Background/HBoxContainer/Hives/HiveContainer"]
margin_top = 18.0
margin_right = 204.0
margin_bottom = 42.0
align = 1
placeholder_text = "Hive Keywords"

[node name="Hive2" type="LineEdit" parent="Background/HBoxContainer/Hives/HiveContainer"]
margin_top = 46.0
margin_right = 204.0
margin_bottom = 70.0
align = 1
placeholder_text = "Hive Keywords"

[node name="Hive3" type="LineEdit" parent="Background/HBoxContainer/Hives/HiveContainer"]
margin_top = 74.0
margin_right = 204.0
margin_bottom = 98.0
align = 1
placeholder_text = "Hive Keywords"

[node name="Hive4" type="LineEdit" parent="Background/HBoxContainer/Hives/HiveContainer"]
margin_top = 102.0
margin_right = 204.0
margin_bottom = 126.0
align = 1
placeholder_text = "Hive Keywords"

[node name="Hive5" type="LineEdit" parent="Background/HBoxContainer/Hives/HiveContainer"]
margin_top = 130.0
margin_right = 204.0
margin_bottom = 154.0
align = 1
placeholder_text = "Hive Keywords"

[node name="Hive6" type="LineEdit" parent="Background/HBoxContainer/Hives/HiveContainer"]
margin_top = 158.0
margin_right = 204.0
margin_bottom = 182.0
align = 1
placeholder_text = "Hive Keywords"

[node name="BrowseRecent" type="Button" parent="Background/HBoxContainer/Hives/HiveContainer"]
margin_top = 186.0
margin_right = 204.0
margin_bottom = 206.0
toggle_mode = true
text = "Browse Most Recent Hives"

[node name="UserPanel" type="Panel" parent="Background/HBoxContainer/Hives/HiveContainer"]
margin_top = 210.0
margin_right = 204.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 60 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background/HBoxContainer/Hives/HiveContainer/UserPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Username" type="Label" parent="Background/HBoxContainer/Hives/HiveContainer/UserPanel/VBoxContainer"]
margin_right = 204.0
margin_bottom = 14.0
text = "USERNAME"
align = 1

[node name="AvatarHolder" type="PanelContainer" parent="Background/HBoxContainer/Hives/HiveContainer/UserPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 204.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 175 )
custom_styles/panel = SubResource( 4 )

[node name="Avatar" type="PanelContainer" parent="Background/HBoxContainer/Hives/HiveContainer/UserPanel/VBoxContainer/AvatarHolder"]
margin_right = 204.0
margin_bottom = 175.0
rect_min_size = Vector2( 150, 150 )
custom_styles/panel = SubResource( 5 )

[node name="UserPanelAccessButtom" type="Button" parent="Background/HBoxContainer/Hives/HiveContainer/UserPanel/VBoxContainer"]
margin_top = 197.0
margin_right = 204.0
margin_bottom = 217.0
text = "Access User Panel"

[node name="FeedAndPost" type="Panel" parent="Background/HBoxContainer"]
margin_left = 208.0
margin_right = 1024.0
margin_bottom = 600.0
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/HBoxContainer/FeedAndPost"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FeedBackground" type="PanelContainer" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer"]
margin_right = 816.0
margin_bottom = 493.0
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/FeedBackground"]
margin_right = 816.0
margin_bottom = 493.0
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BuzzContainer" type="VBoxContainer" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/FeedBackground/ScrollContainer"]
margin_right = 816.0
margin_bottom = 493.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buzz" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/FeedBackground/ScrollContainer/BuzzContainer" instance=ExtResource( 3 )]

[node name="RecentTags" type="ScrollContainer" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/FeedBackground"]
visible = false
margin_right = 816.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 10 )

[node name="RecentHiveContainer" type="VBoxContainer" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/FeedBackground/RecentTags"]
margin_right = 816.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RecentHive" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/FeedBackground/RecentTags/RecentHiveContainer" instance=ExtResource( 11 )]

[node name="BuzzKeywords" type="Panel" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer"]
margin_top = 497.0
margin_right = 816.0
margin_bottom = 546.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="KeywordContainer" type="HBoxContainer" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzKeywords"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="KeywordEntry1" type="LineEdit" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzKeywords/KeywordContainer"]
margin_right = 132.0
margin_bottom = 49.0
size_flags_horizontal = 3
placeholder_text = "Enter a Keyword"
caret_blink = true

[node name="KeywordEntry2" type="LineEdit" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzKeywords/KeywordContainer"]
margin_left = 136.0
margin_right = 269.0
margin_bottom = 49.0
size_flags_horizontal = 3
placeholder_text = "Enter a Keyword"
caret_blink = true

[node name="KeywordEntry3" type="LineEdit" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzKeywords/KeywordContainer"]
margin_left = 273.0
margin_right = 406.0
margin_bottom = 49.0
size_flags_horizontal = 3
placeholder_text = "Enter a Keyword"
caret_blink = true

[node name="KeywordEntry4" type="LineEdit" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzKeywords/KeywordContainer"]
margin_left = 410.0
margin_right = 542.0
margin_bottom = 49.0
size_flags_horizontal = 3
placeholder_text = "Enter a Keyword"
caret_blink = true

[node name="KeywordEntry5" type="LineEdit" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzKeywords/KeywordContainer"]
margin_left = 546.0
margin_right = 679.0
margin_bottom = 49.0
size_flags_horizontal = 3
placeholder_text = "Enter a Keyword"
caret_blink = true

[node name="KeywordEntry6" type="LineEdit" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzKeywords/KeywordContainer"]
margin_left = 683.0
margin_right = 816.0
margin_bottom = 49.0
size_flags_horizontal = 3
placeholder_text = "Enter a Keyword"
caret_blink = true

[node name="BuzzEntry" type="Panel" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer"]
margin_top = 550.0
margin_right = 816.0
margin_bottom = 600.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzEntry"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BuzzEntryField" type="LineEdit" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzEntry/HBoxContainer"]
margin_right = 720.0
margin_bottom = 50.0
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 3
placeholder_text = "Type your Buzz here!"
caret_blink = true

[node name="SubmitBuzz" type="Button" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzEntry/HBoxContainer"]
margin_left = 724.0
margin_right = 816.0
margin_bottom = 50.0
text = "Submit Buzz"

[node name="Blip" type="AudioStreamPlayer" parent="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzEntry"]
stream = ExtResource( 5 )
volume_db = -6.0
pitch_scale = 1.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0
autoplay = true

[node name="LogInScreen" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 600 )
custom_styles/panel = SubResource( 3 )

[node name="LogInScreenPanel" type="Panel" parent="LogInScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -118.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="MakeANewAccount" type="Control" parent="LogInScreen/LogInScreenPanel"]
margin_left = 186.0
margin_right = 226.0
margin_bottom = 40.0

[node name="CreateNewAccount" type="Label" parent="LogInScreen/LogInScreenPanel/MakeANewAccount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 84.0
margin_top = -18.0
margin_right = 213.0
margin_bottom = -4.0
text = "Create New Account"

[node name="EnterUsername" type="LineEdit" parent="LogInScreen/LogInScreenPanel/MakeANewAccount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = 14.0
margin_right = 308.0
margin_bottom = 38.0
align = 1
placeholder_text = "Enter Username"

[node name="EnterPassword" type="LineEdit" parent="LogInScreen/LogInScreenPanel/MakeANewAccount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = 54.0
margin_right = 308.0
margin_bottom = 78.0
align = 1
secret = true
placeholder_text = "Enter Password"

[node name="EnterPasswordConfirmation" type="LineEdit" parent="LogInScreen/LogInScreenPanel/MakeANewAccount"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = 92.0
margin_right = 308.0
margin_bottom = 116.0
align = 1
secret = true
placeholder_text = "Confrim Password"

[node name="CreateUserButton" type="Button" parent="LogInScreen/LogInScreenPanel/MakeANewAccount"]
margin_left = 8.0
margin_top = 162.0
margin_right = 326.0
margin_bottom = 182.0
text = "Submit"
script = ExtResource( 6 )

[node name="ReturningUser" type="Control" parent="LogInScreen/LogInScreenPanel"]
margin_left = 568.0
margin_right = 608.0
margin_bottom = 40.0

[node name="LogIn" type="Label" parent="LogInScreen/LogInScreenPanel/ReturningUser"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 79.0
margin_top = -18.0
margin_right = 208.0
margin_bottom = -4.0
text = "Log In"
align = 1

[node name="EnterUsername" type="LineEdit" parent="LogInScreen/LogInScreenPanel/ReturningUser"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = 14.0
margin_right = 308.0
margin_bottom = 38.0
align = 1
placeholder_text = "Enter Username"

[node name="EnterPassword" type="LineEdit" parent="LogInScreen/LogInScreenPanel/ReturningUser"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = 54.0
margin_right = 308.0
margin_bottom = 78.0
align = 1
secret = true
placeholder_text = "Enter Password"

[node name="LoginButton" type="Button" parent="LogInScreen/LogInScreenPanel/ReturningUser"]
margin_left = 8.0
margin_top = 114.0
margin_right = 326.0
margin_bottom = 134.0
text = "Log In"
script = ExtResource( 7 )

[node name="UserDataMessagePanel" type="Panel" parent="LogInScreen/LogInScreenPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -183.0
margin_bottom = -131.0

[node name="Message" type="Label" parent="LogInScreen/LogInScreenPanel/UserDataMessagePanel"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
text = "Passwords do not match"
align = 1
valign = 1
uppercase = true

[node name="EnterApp" type="Button" parent="LogInScreen/LogInScreenPanel"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 133.0
margin_bottom = 185.0
text = "Enter Bzl App"

[node name="UserPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 600 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 9 )

[node name="UserPanelBox" type="Panel" parent="UserPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -118.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="VBoxContainer" type="VBoxContainer" parent="UserPanel/UserPanelBox"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UserPanelTitle" type="Label" parent="UserPanel/UserPanelBox/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "USER PANEL"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UserPanel/UserPanelBox/VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UserInfo" type="VBoxContainer" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo"]
margin_right = 120.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Username" type="Label" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo/VBoxContainer"]
margin_right = 120.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.08
text = "Username:"

[node name="Pronouns" type="Label" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo/VBoxContainer"]
margin_top = 18.0
margin_right = 120.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.18
text = "Pronouns:"

[node name="MarginContainer" type="MarginContainer" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo/VBoxContainer"]
margin_top = 39.0
margin_right = 120.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6

[node name="Bio" type="Label" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo/VBoxContainer"]
margin_top = 102.0
margin_right = 120.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Bio:"

[node name="UserInfo2" type="VBoxContainer" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 415.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.48

[node name="VBoxContainer" type="VBoxContainer" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2"]
margin_right = 291.0
margin_bottom = 200.0
size_flags_vertical = 3

[node name="Username" type="Label" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2/VBoxContainer"]
margin_right = 291.0
margin_bottom = 14.0
text = "Azakaela"

[node name="Pronouns" type="Label" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2/VBoxContainer"]
margin_top = 18.0
margin_right = 291.0
margin_bottom = 32.0
text = "They/Them"

[node name="EditPronounsField" type="LineEdit" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2/VBoxContainer"]
visible = false
margin_top = 36.0
margin_right = 291.0
margin_bottom = 60.0

[node name="EditPronouns" type="Button" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2/VBoxContainer"]
margin_top = 36.0
margin_right = 291.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.12
toggle_mode = true
text = "Edit Pronouns"

[node name="MarginContainer" type="MarginContainer" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2/VBoxContainer"]
margin_top = 60.0
margin_right = 291.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Bio" type="Label" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2/VBoxContainer"]
margin_top = 101.0
margin_right = 291.0
margin_bottom = 175.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "A short little bio would go here"
autowrap = true

[node name="EditBioPanel" type="Panel" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2/VBoxContainer/Bio"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0

[node name="EditBioText" type="TextEdit" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2/VBoxContainer/Bio/EditBioPanel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="EditBioButton" type="Button" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2/VBoxContainer"]
margin_top = 179.0
margin_right = 291.0
margin_bottom = 199.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.12
toggle_mode = true
text = "Edit Bio"

[node name="ExtraSpaceForNow" type="VBoxContainer" parent="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer"]
margin_left = 419.0
margin_right = 1024.0
margin_bottom = 200.0
size_flags_horizontal = 3

[node name="ExitUserPanel" type="Button" parent="UserPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 133.0
margin_bottom = 185.0
text = "Exit User Panel"

[connection signal="pressed" from="Background/HBoxContainer/Hives/HiveContainer/BrowseRecent" to="Background/HBoxContainer/FeedAndPost/VBoxContainer/FeedBackground/RecentTags" method="_on_BrowseRecent_pressed"]
[connection signal="toggled" from="Background/HBoxContainer/Hives/HiveContainer/BrowseRecent" to="." method="_on_BrowseRecent_toggled"]
[connection signal="pressed" from="Background/HBoxContainer/Hives/HiveContainer/UserPanel/VBoxContainer/UserPanelAccessButtom" to="." method="_on_UserPanelAccessButtom_pressed"]
[connection signal="pressed" from="Background/HBoxContainer/FeedAndPost/VBoxContainer/BuzzEntry/HBoxContainer/SubmitBuzz" to="." method="_on_SubmitBuzz_pressed"]
[connection signal="pressed" from="LogInScreen/LogInScreenPanel/MakeANewAccount/CreateUserButton" to="LogInScreen/LogInScreenPanel/MakeANewAccount/CreateUserButton" method="_on_CreateUserButton_pressed"]
[connection signal="pressed" from="LogInScreen/LogInScreenPanel/ReturningUser/LoginButton" to="LogInScreen/LogInScreenPanel/ReturningUser/LoginButton" method="_on_LoginButton_pressed"]
[connection signal="pressed" from="LogInScreen/LogInScreenPanel/EnterApp" to="LogInScreen/LogInScreenPanel/ReturningUser/LoginButton" method="_on_EnterApp_pressed"]
[connection signal="toggled" from="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2/VBoxContainer/EditPronouns" to="UserPanel" method="_on_EditPronouns_toggled"]
[connection signal="toggled" from="UserPanel/UserPanelBox/VBoxContainer/HBoxContainer/UserInfo2/VBoxContainer/EditBioButton" to="UserPanel" method="_on_EditBioButton_toggled"]
[connection signal="pressed" from="UserPanel/ExitUserPanel" to="UserPanel" method="_on_ExitUserPanel_pressed"]
